# rov_pid_controller

./: CMakeLists.txt  README.md  package.xml
config/: controller.yaml
foxglove/: README.md  rov_pid_controller.json
include/rov_pid_controller/: cascaded_axis.hpp  controller_node.hpp  pid.hpp  reference_model.hpp
launch/: real.launch.py  sim.launch.py
msg/: ControllerStatus.msg
scripts/: axis_panel.py
src/: cascaded_axis.cpp  controller_main.cpp  controller_node.cpp  pid.cpp  reference_model.cpp
srv/: CaptureSetpoint.srv  SetAllModes.srv  SetAxisMode.srv
test/: test_cascaded_axis.cpp  test_pid.cpp  test_reference_model.cpp
